# Pinocchio

./: .gitignore  CMakeLists.txt  Makefile  README.txt  bone.tgf  cal_watertight.py  cal_watertight_meshlab.py  run.sh  run_manifold.py  run_pinocchio.py  run_pinocchio_centaur.py  run_pinocchio_horse.py  run_pinocchio_human.py  run_pinocchio_quad.py
AttachWeights/: AttachWeights.cpp  CMakeLists.txt  Makefile
Demo/: Makefile  demoUI.cpp  processor.cpp
DemoUI/: demoUI.cpp  processor.cpp
Pinocchio/: CMakeLists.txt  Pinocchio.cpp  attachment.cpp  discretization.cpp  mesh.cpp  quaddisttree.h
data/: 13_low_w.ply
test/: CMakeLists.txt  test_basic.cpp  test_mesh.cpp
test/data/: plane_tet.off  square.off  tet.off  tet1.off
test/src/: CMakeLists.txt  debugging.h  dtree.h  hashutils.h  indexer.cpp  indexer.h  intersector.h  mathutils.h  mesh.h  multilinear.h  pointprojector.h  quaddisttree.h  utils.h  vecutils.h
